[package]
name = "tcpproxy"
version = "0.4.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Cross-platform asynchronous multi-client TCP proxy; great tokio demo."
homepage = "https://github.com/neosmart/tcpproxy"
repository = "https://github.com/neosmart/tcpproxy"
readme = "README.md"
keywords = ["proxy", "tcp", "networking", "tokio"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
edition = "2018"

[dependencies]
futures = "0.3.28"
getopts = "0.2.21"
tokio = { version = "1.32.0", features = [ "io-util", "net", "rt-multi-thread", "macros", "sync" ] }
